# Radar-Jrmy

./: .env.example  .eslintrc.json  .gitignore  .htmlhintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml  requirements-dev.txt  technologies.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_technology.md  bug_report.md
.github/workflows/: ci.yml  collect.yml  deploy.yml
data/: data.json
scripts/: collect.py  notify_rising.py  validate_yaml.py
scripts/sources/: cncf_source.py  github_source.py  npm_source.py  pypi_source.py
scripts/utils/: http_client.py
src/: editor.html  index.html  table.html
src/css/: style.css
src/js/: alerts.js  data-loader.js  editor.js  radar.js  table.js
tests/: test_github_source.py  test_npm_source.py  test_pypi_source.py
tests/fixtures/: github_commits_response.json  github_response.json  npm_response.json  pypi_response.json
